--- a/xpr/element/template.hbs
+++ b/xpr/element/template.hbs
@@ -50,7 +50,7 @@
         </div>
 
         <div class="content">
-            <h2 id="bonjour" class="content-subhead devon-strong">Bonjour!</h2>
+            <h2 id="bonjour" class="content-subhead devon-strong">Bonjour Gobert.!</h2>
             <p>
             Welcome to the Bundles 2.0 Live Demo. The main audience for this demo is existing developers working within Expression looking for a "crash course" on the new stuff Bundles 2.0 provides - and analogues to existing techniques that will be familiar to individuals with experience developing within Expression.
             </p>
