--- a/xpr/element/template.hbs
+++ b/xpr/element/template.hbs
@@ -42,7 +42,7 @@
             <div>
             <a class="" target="_blank" href="https://expression.cloud"><img src="{{{WebRoot xpr.bundle}}}/img/xpr.png"></a>
             </div>
-            <h1>Bundles 2.0 Demo Repo</h1>
+            <h1>Bundles 2.0 Demo Repo Gobert</h1>
             <div>
             <a class="gitlab_link" target="_blank" href="https://github.com/expressioncloud/bundles-demo"><img src="{{{WebRoot xpr.bundle}}}/img/GitHub_Logo.png"></a>
             </div>
