test gobert 23 de mayp

--- a/xpr/element/template.hbs
+++ b/xpr/element/template.hbs
@@ -6,7 +6,7 @@
   crossorigin="anonymous"></script>
 
 <head>
-    <title>Bundles 2.0 Demo Repo Gobert</title>
+    <title>Bundles 2.0 Demo Repo Gobert......</title>
     <link rel="stylesheet" href="{{{WebRoot xpr.bundle}}}/css/pure-min.css">
     <link rel="stylesheet" href="{{{WebRoot xpr.bundle}}}/css/side-menu.css">
     <link rel="stylesheet" href="{{{WebRoot xpr.bundle}}}/css/devon-custom.css">
